--- a/index.html
+++ b/index.html
@@ -1,34 +1,126 @@
+
 <!DOCTYPE html>
-<html>
-<style>
-table, th, td {
-  border:1px solid black;
-}
-</style>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>HTML Result</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" 
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+</head>
 <body>
+    <div class="container body-content">
+        
 
-<h2>A basic HTML table</h2>
 
-<table style="width:100%">
-  <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
-  </tr>
-  <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-  </tr>
-  <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-  </tr>
-</table>
 
-<p>To undestand the example better, we have added borders to the table.</p>
+<div class="container">
 
+
+                    <div class="row justify-content-start" style="padding-top:10px;">
+<h1>Sign Up Login</h1>
+
+
+                </div>
+                <div class="row justify-content-start" style="padding-top:10px;">
+
+                <div class="col" style="padding-top:10px;">
+<label>Name</label>
+
+
+
+                </div>
+                <div class="col" style="padding-top:10px;">
+<label>last Name</label>
+
+
+
+                </div>
+                </div>
+                <div class="row justify-content-start" style="padding-top:10px;">
+
+                <div class="col" style="padding-top:10px;">
+<input class="form-control"></input>
+
+
+                </div>
+                <div class="col" style="padding-top:10px;">
+<input class="form-control"></input>
+
+
+                </div>
+                </div>
+                <div class="row justify-content-start" style="padding-top:10px;">
+
+                <div class="col" style="padding-top:10px;">
+<label>Phone</label>
+
+
+
+                </div>
+                <div class="col" style="padding-top:10px;">
+<label>c - mail</label>
+
+
+
+                </div>
+                </div>
+                <div class="row justify-content-start" style="padding-top:10px;">
+
+                <div class="col" style="padding-top:10px;">
+<input class="form-control"></input>
+
+
+                </div>
+                <div class="col" style="padding-top:10px;">
+<input class="form-control"></input>
+
+
+                </div>
+                </div>
+                <div class="row justify-content-start" style="padding-top:10px;">
+
+                <div class="col" style="padding-top:10px;">
+<label>Password</label>
+
+
+
+                </div>
+                <div class="col" style="padding-top:10px;">
+<label>Continue Password</label>
+
+
+
+                </div>
+                </div>
+                <div class="row justify-content-start" style="padding-top:10px;">
+
+                <div class="col" style="padding-top:10px;">
+<input class="form-control"></input>
+
+
+                </div>
+                <div class="col" style="padding-top:10px;">
+<input class="form-control"></input>
+
+
+                </div>
+                </div>
+                <div class="row justify-content-center" style="padding-top:10px;">
+<label><input type="checkbox" /> I I agree to Terms and Conditions</label>
+
+
+                </div>
+                <div class="row justify-content-end" style="padding-top:10px;">
+<button class="btn btn-primary">SIGN UP</button>
+
+
+                </div>
+
+
+</div>
+
+
+
+    </div>
 </body>
 </html>
-
